@@ -38,6 +38,78 @@ class Trean_Api extends Horde_Registry_Api
     }
 
     /**
+     * Retrieve the list of used tag_names, tag_ids and the total number
+     * of resources that are linked to that tag.
+     *
+     * @param array $tags   An optional array of tag_ids. If omitted, all tags
+     *                      will be included.
+     * @param string $user  Restrict result to those tagged by $user.
+     *
+     * @return array  An array containing tag_name, and total
+     */
+    public function listTagInfo($tags = null, $user = null)
+    {
+        return $GLOBALS['injector']
+            ->getInstance('Trean_Tagger')->getTagInfo($tags, 500, null, $user);
+    }
+
+    /**
+     * SearchTags API:
+     * Returns an application-agnostic array (useful for when doing a tag search
+     * across multiple applications)
+     *
+     * The 'raw' results array can be returned instead by setting $raw = true.
+     *
+     * @param array $names           An array of tag_names to search for.
+     * @param integer $max           The maximum number of resources to return.
+     * @param integer $from          The number of the resource to start with.
+     * @param string $resource_type  The resource type [bookmark, '']
+     * @param string $user           Restrict results to resources owned by $user.
+     * @param boolean $raw           Return the raw data?
+     *
+     * @return array An array of results:
+     * <pre>
+     *  'title'    - The title for this resource.
+     *  'desc'     - A terse description of this resource.
+     *  'view_url' - The URL to view this resource.
+     *  'app'      - The Horde application this resource belongs to.
+     * </pre>
+     */
+    public function searchTags($names, $max = 10, $from = 0,
+                               $resource_type = '', $user = null, $raw = false)
+    {
+        // TODO: $max, $from, $resource_type not honored
+
+        $results = $GLOBALS['injector']
+            ->getInstance('Trean_Tagger')
+            ->search(
+                $names,
+                array('type' => 'bookmark', 'user' => $user));
+
+        // Check for error or if we requested the raw data array.
+        if ($raw) {
+            return $results;
+        }
+
+        $return = array();
+        $redirectUrl = Horde::url('redirect.php');
+        foreach ($results as $bookmark_id) {
+            try {
+                $bookmark = $GLOBALS['trean_gateway']->getBookmark($bookmark_id);
+                $return[] = array(
+                    'title' => $bookmark->title,
+                    'desc' => $bookmark->description,
+                    'view_url' => $redirectUrl->add('b', $bookmark->id),
+                    'app' => 'trean',
+                );
+            } catch (Exception $e) {
+            }
+        }
+
+        return $return;
+    }
+
+    /**
      * Returns a URL that can be used in other applications to add the currently
      * displayed page as a bookmark.  If javascript and DOM is available, an overlay
      * is used, if javascript and no DOM, then a pop-up is used and if no javascript
