@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
  <notes>
+* [cjh] Implement listTagInfo and searchTags API calls for Trean (Bug #11816)
 * [cjh] Fix fetching, saving, and display of favicons
  </notes>
  <contents>
@@ -538,6 +539,7 @@
    <date>2012-11-27</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
+* [cjh] Implement listTagInfo and searchTags API calls for Trean (Bug #11816)
 * [cjh] Fix fetching, saving, and display of favicons
    </notes>
   </release>
